--- a/public/404.html
+++ b/public/404.html
@@ -63,7 +63,7 @@
   <meta name="description" content="Visiting Assistant Professor of Statistics" />
 
   
-  <link rel="alternate" hreflang="en-us" href="https://deepbas.github.io/404.html" />
+  <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/404.html" />
 
   
   
@@ -276,7 +276,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_32x32_fill_lanczos_center_3.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_180x180_fill_lanczos_center_3.png" />
 
-  <link rel="canonical" href="https://deepbas.github.io/404.html" />
+  <link rel="canonical" href="https://deepbas.netlify.app/404.html" />
 
   
   
@@ -299,10 +299,10 @@
   <meta property="twitter:card" content="summary" />
   
   <meta property="og:site_name" content="Deepak Bastola" />
-  <meta property="og:url" content="https://deepbas.github.io/404.html" />
+  <meta property="og:url" content="https://deepbas.netlify.app/404.html" />
   <meta property="og:title" content="404 Page not found | Deepak Bastola" />
-  <meta property="og:description" content="Visiting Assistant Professor of Statistics" /><meta property="og:image" content="https://deepbas.github.io/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
-    <meta property="twitter:image" content="https://deepbas.github.io/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="Visiting Assistant Professor of Statistics" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+    <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
   
