intro added again3

--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -658,9 +658,6 @@
 
 <div class="universal-wrapper">
   
-    <div class="article-style"><p>I am teaching the following courses:</p>
-</div>
-  
 
   
   
@@ -692,7 +689,7 @@
     
     <a href="/courses/stat220/"  class="summary-link">
       <div class="article-style">
-        An example of using Wowchemy&rsquo;s Book layout for publishing online courses.
+        A course focusing on the computational side of data analysis
       </div>
     </a>
     
