--- a/public/courses/stat220/python/index.html
+++ b/public/courses/stat220/python/index.html
@@ -715,6 +715,10 @@
 
   <li class=""><a href="/courses/stat220/stats/">Statistics</a></li>
 
+
+
+  <li class=""><a href="/courses/stat220/intro/">Hello R Markdown</a></li>
+
       
         </ul>
       
