--- a/public/courses/stat220/python/index.html
+++ b/public/courses/stat220/python/index.html
@@ -717,6 +717,10 @@
 
 
 
+  <li class=""><a href="/courses/stat220/r-markdown/my-first-post/">My first post</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/intro/">Hello R Markdown</a></li>
 
       
