--- a/public/courses/stat220/week1/python/index.html
+++ b/public/courses/stat220/week1/python/index.html
@@ -300,7 +300,7 @@
   
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week1/python/" />
-  <meta property="og:title" content="Python basics | Deepak Bastola" />
+  <meta property="og:title" content="Week 1 Materials | Deepak Bastola" />
   <meta property="og:description" content="Build a foundation in Python." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
@@ -327,7 +327,7 @@
 
 
 
-  <title>Python basics | Deepak Bastola</title>
+  <title>Week 1 Materials | Deepak Bastola</title>
 </head>
 
 
@@ -705,7 +705,7 @@
       
 
 
-  <li class="active"><a href="/courses/stat220/week1/python/">Python basics</a></li>
+  <li class="active"><a href="/courses/stat220/week1/python/">Week 1 Materials</a></li>
 
 
 
@@ -717,7 +717,7 @@
 
 
 
-  <li class=""><a href="/courses/stat220/r-markdown/my-first-post/">My first post</a></li>
+  <li class=""><a href="/courses/stat220/week1/my-first-post/">My first post</a></li>
 
 
 
@@ -800,7 +800,7 @@
 
 
       <li class="breadcrumb-item active" aria-current="page">
-        Python basics
+        Week 1 Materials
       </li>
     </ol>
   </nav>
@@ -808,7 +808,7 @@
 
           
 
-          <h1>Python basics</h1>
+          <h1>Week 1 Materials</h1>
 
           <div class="article-style">
             <p>Build a foundation in Python.</p>
