--- a/public/courses/stat220/week4/visualization/index.html
+++ b/public/courses/stat220/week4/visualization/index.html
@@ -705,7 +705,7 @@
       
 
 
-  <li class=""><a href="/courses/stat220/week1/python/">Week 1 Materials</a></li>
+  <li class=""><a href="/courses/stat220/week1/python/">Week 1</a></li>
 
 
 
@@ -717,11 +717,7 @@
 
 
 
-  <li class=""><a href="/courses/stat220/week1/my-first-post/">My first post</a></li>
-
-
-
-  <li class=""><a href="/courses/stat220/week2/intro/">Hello R Markdown</a></li>
+  <li class=""><a href="/courses/stat220/week2/intro/">Week 1</a></li>
 
       
         </ul>
