--- a/public/courses/stat220/week1/python/index.html
+++ b/public/courses/stat220/week1/python/index.html
@@ -705,7 +705,7 @@
       
 
 
-  <li class="active"><a href="/courses/stat220/week1/python/">Week 1 Materials</a></li>
+  <li class="active"><a href="/courses/stat220/week1/python/">Week 1</a></li>
 
 
 
@@ -717,11 +717,7 @@
 
 
 
-  <li class=""><a href="/courses/stat220/week1/my-first-post/">My first post</a></li>
-
-
-
-  <li class=""><a href="/courses/stat220/week2/intro/">Hello R Markdown</a></li>
+  <li class=""><a href="/courses/stat220/week2/intro/">Week 1</a></li>
 
       
         </ul>
@@ -800,7 +796,7 @@
 
 
       <li class="breadcrumb-item active" aria-current="page">
-        Week 1 Materials
+        Week 1
       </li>
     </ol>
   </nav>
