--- a/public/courses/stat220/week3/stats/index.html
+++ b/public/courses/stat220/week3/stats/index.html
@@ -722,6 +722,10 @@
 
   <li class=""><a href="/courses/stat220/week2/intro/">Week 1</a></li>
 
+
+
+  <li class=""><a href="/courses/stat220/tutorials/pat/">Cache credentials for RStudio and GitHub</a></li>
+
       
         </ul>
       
