--- a/public/courses/stat220/week4/visualization/index.html
+++ b/public/courses/stat220/week4/visualization/index.html
@@ -721,6 +721,10 @@
 
 
 
+  <li class=""><a href="/courses/stat220/tutorials/lect1/">Up and Running with blogdown</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/tutorials/pat/">Cache credentials for RStudio and GitHub</a></li>
 
       
