--- a/public/courses/stat220/index.html
+++ b/public/courses/stat220/index.html
@@ -858,7 +858,7 @@
     
       <li>
         <h5><a href="/courses/stat220/tutorials/github_stat220/">GitHub Classroom Guide for Stat 220</a></h5>
-        <p>Overview If you are using the maize RStudio server, then you can connect to GitHub without any extra software downloads. If you are using RStudio on your computer, then you will need to download Git software (as directed in Software in Stat 220) to use GitHub connected projects.</p>
+        <p>Overview If you are using the maize RStudio server, then you can connect to GitHub without any extra software downloads. If you are using RStudio on your computer, then you will need to download Git software (as directed in [Software in Stat 220]({{&lt; ref “software” &gt;}}) to use GitHub connected projects.</p>
       </li>
     
       <li>
