--- a/public/courses/stat220/tutorials/github_stat220/index.html
+++ b/public/courses/stat220/tutorials/github_stat220/index.html
@@ -60,7 +60,7 @@
   
     
   
-  <meta name="description" content="Overview If you are using the maize RStudio server, then you can connect to GitHub without any extra software downloads. If you are using RStudio on your computer, then you will need to download Git software (as directed in Software in Stat 220) to use GitHub connected projects." />
+  <meta name="description" content="Overview If you are using the maize RStudio server, then you can connect to GitHub without any extra software downloads. If you are using RStudio on your computer, then you will need to download Git software (as directed in [Software in Stat 220]({{&lt; ref “software” &gt;}}) to use GitHub connected projects." />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/tutorials/github_stat220/" />
@@ -301,7 +301,7 @@
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/tutorials/github_stat220/" />
   <meta property="og:title" content="GitHub Classroom Guide for Stat 220 | Deepak Bastola" />
-  <meta property="og:description" content="Overview If you are using the maize RStudio server, then you can connect to GitHub without any extra software downloads. If you are using RStudio on your computer, then you will need to download Git software (as directed in Software in Stat 220) to use GitHub connected projects." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Overview If you are using the maize RStudio server, then you can connect to GitHub without any extra software downloads. If you are using RStudio on your computer, then you will need to download Git software (as directed in [Software in Stat 220]({{&lt; ref “software” &gt;}}) to use GitHub connected projects." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -708,7 +708,7 @@
 <p>If you are using the maize RStudio server, then you can connect to
 GitHub without any extra software downloads. If you are using RStudio on
 your computer, then you will need to download Git software (as directed
-in <a href="software.Rmd">Software in Stat 220</a>) to use GitHub connected
+in [Software in Stat 220]({{&lt; ref “software” &gt;}}) to use GitHub connected
 projects.</p>
 <p>I will host all of our course materials on GitHub, and you will use
 GitHub to submit homework and collaborate on projects.</p>
