--- a/content/courses/stat220/Tutorials/github_stat220.html
+++ b/content/courses/stat220/Tutorials/github_stat220.html
@@ -20,7 +20,7 @@ GitHub to submit homework and collaborate on projects.</p>
 <div id="getting-setup-with-git-and-github" class="section level2">
 <h2>Getting setup with Git and GitHub</h2>
 <p>If you are <strong>not</strong> working on the maize RStudio server, then make sure
-that you have installed all of the software mentioned in <a href="software.md">Software in
+that you have installed all of the software mentioned in <a href="https://deepbas.netlify.app/courses/stat220/tutorials/software/">Software in
 Stat 220</a>. In addition, you should install the <code>usethis</code>
 and <code>gitcreds</code> R packages.</p>
 <p>Everyone needs to connect Git and GitHub by doing the following:</p>
