--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -302,7 +302,7 @@
   
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/" />
-  <meta property="og:title" content="Courses | Deepak Bastola" />
+  <meta property="og:title" content="Current Courses | Deepak Bastola" />
   <meta property="og:description" content="Visiting Assistant Professor of Statistics" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
@@ -323,7 +323,7 @@
 
 
 
-  <title>Courses | Deepak Bastola</title>
+  <title>Current Courses | Deepak Bastola</title>
 </head>
 
 
@@ -647,7 +647,7 @@
     
   
 <div class="universal-wrapper pt-3">
-  <h1>Courses</h1>
+  <h1>Current Courses</h1>
 
   
 
