--- a/public/courses/stat220/index.html
+++ b/public/courses/stat220/index.html
@@ -706,6 +706,10 @@
 
   <li class=""><a href="/courses/stat220/tutorials/software/">Software in Stat 220</a></li>
 
+
+
+  <li class=""><a href="/courses/stat220/tutorials/rstudio_stat220/">Using RStudio in Stat 220</a></li>
+
       
         </ul>
       
