--- a/public/courses/stat220/tutorials/software/index.html
+++ b/public/courses/stat220/tutorials/software/index.html
@@ -796,7 +796,7 @@ follow Option 2</p></li>
 </div>
 <div id="slack" class="section level2">
 <h2>Slack</h2>
-<p>We will use Slack for all course communication. <a href="https://join.slack.com/t/stat220-fa21/shared_invite/zt-uvpbbjgj-cyr3olDzY~s7PkaY~Vu7Sg">Sign up for our course
+<p>We will use Slack for all course communication. <a href="https://join.slack.com/t/stat220datasc-wmz5924/shared_invite/zt-110xuf0zq-0Ap9EaQAp46YiilE4Jvc~A">Sign up for our course
 Slack team
 here</a>!
 You will need to create an account with a username, and log in to read
