--- a/public/courses/stat220/tutorials/github_stat220/index.html
+++ b/public/courses/stat220/tutorials/github_stat220/index.html
@@ -791,6 +791,7 @@ box to your clipboard.)</li>
 RStudio window and select <strong>New Project…</strong>.</li>
 </ul>
 <p> </p>
+<pre class="r"><code>knitr::include_graphics(&quot;img/maize_project.png&quot;)</code></pre>
 <ul>
 <li><p>Select <strong>Version Control</strong> and then <strong>New Project</strong></p></li>
 <li><p>Paste the link you just copied into the Repository URL box. Leave
@@ -866,12 +867,16 @@ files to Github by the deadline.</p>
 <p>Collaborative Github assignments are pretty similar to individual assignments.</p>
 <div id="creating-a-grouppartner-assignment-repo-and-project" class="section level3">
 <h3>Creating a group/partner assignment repo and project</h3>
-<p>Go to our course GitHub organization page(<a href="https://github.com/stat220-fa21" class="uri">https://github.com/stat220-fa21</a>) and find the repo for your group, for example if your group name is “team01” the you might find the <code>mp1-team01</code> repo. Clone this repo to your computer/maize account using the same steps done for an individual assignment (see steps 2-3).</p>
+<p>Go to our course GitHub organization page and find the repo for your group, for example if your group name is “team01” the you might find the <code>mp1-team01</code> repo. Clone this repo to your computer/maize account using the same steps done for an individual assignment (see steps 2-3).</p>
 <div id="working-with-collaborative-repos" class="section level4">
 <h4>Working with collaborative repos</h4>
 <p>For group homework, I suggest that only the <em>recorder</em> edit the group-homework-x.Rmd file to avoid merge conflicts! Other group members can create a new Markdown doc to run and save commands. Only the recorder needs to <strong>push</strong> changes (answers) to the Github repo and all others can then <strong>pull</strong> these changes (i.e. the final answers) after the HW is submitted.</p>
 <p>When you are working together on a Github project, you should commit and push your modifications frequently. You will also need to frequently <strong>pull</strong> updates from Github down to your local version of RStudio. These updates are changes that your teammates have made since your last pull. To pull in changes, click the “Down” <strong>Pull</strong> arrow in the Git tab (shown above).</p>
 <p>If you get an error about conflict after pulling or pushing, don’t freak out! This can happen if you edit a file (usually an .Rmd or .R file) in a location that was also changed by a teammate. When this happens you should attempt to fix the <strong>merge conflict</strong>. Take a look at <a href="http://r-pkgs.had.co.nz/git.html#git-pull">this resource site</a> and try to fix the merge conflict in Rstudio. Katie also created a diagram shown below that “explains” how and when conflicts will likely happen and how you can resolve the problems in Rstudio. If that doesn’t work contact me!</p>
+<div class="figure">
+<img src="img/maize_home.png" alt="" />
+<p class="caption">Conflict Resolution</p>
+</div>
 </div>
 </div>
 </div>
