--- a/content/courses/stat220/Tutorials/github_stat220.html
+++ b/content/courses/stat220/Tutorials/github_stat220.html
@@ -46,18 +46,16 @@ so I recommend trying that first.</p>
 <ul>
 <li><p><strong>Strongly recommended:</strong> Cache credential using a HTTPS linked
 project.</p>
-<p>Complete the steps in <a href="http://happygitwithr.com/credential-caching.html">Section 10.1 of Happy Git with
+<p>Complete the steps in <a href="https://happygitwithr.com/https-pat.html">Section 9.1 of Happy Git with
 R</a> to get a
 personal access token (you will need to install the <code>usethis</code>
-package first). Then, follow the directions in <a href="https://happygitwithr.com/credential-caching.html#call-an-r-function-to-store-your-credentials">Section 10.2.1
+package first). Then, follow the directions in <a href="https://happygitwithr.com/https-pat.html#call-an-r-function-to-store-your-credentials">Section 9.2
 of Happy Git with
-R</a>
-(I’ve had good luck with the <code>gitcreds</code> package, and it is
-installed on maize.)</p></li>
+R</a></p></li>
 <li><p>A second method is to generate a SSH key. First check to see if
 you have a SSH key. Go into the shell (again, through RStudio
 <code>Tools -&gt; Shell</code>) and complete on this page
-<a href="http://happygitwithr.com/ssh-keys.html" class="uri">http://happygitwithr.com/ssh-keys.html</a>, which is Chapter 11 in
+<a href="http://happygitwithr.com/ssh-keys.html" class="uri">http://happygitwithr.com/ssh-keys.html</a>, which is Chapter 10 in
 Happy Git with R.</p></li>
 </ul></li>
 <li><p>(optional) Follow the instructions here
@@ -80,7 +78,7 @@ repository will contain assignment details (README, .Rmd).</p>
 <h3>Creating an individual assignment repo and project</h3>
 <ol style="list-style-type: decimal">
 <li>Go to our course GitHub organization page
-(<a href="https://deepbas.netlify.app/courses/" class="uri">https://deepbas.netlify.app/courses/</a>) and find your homework repo, such as <code>hw-1-username</code> (where your username is attached).</li>
+(<a href="https://deepbas.io/courses/stat220/" class="uri">https://deepbas.io/courses/stat220/</a>) and find your homework repo, such as <code>hw-1-username</code> (where your username is attached).</li>
 <li>Enter the online assignment repository on GitHub. Click the green
 <strong>“Code”</strong> button. Most of you should just use the default setting
 which is to “clone” (copy) using HTTPS. Click the clipboard to the
@@ -176,11 +174,7 @@ files to Github by the deadline.</p>
 <h4>Working with collaborative repos</h4>
 <p>For group homework, I suggest that only the <em>recorder</em> edit the group-homework-x.Rmd file to avoid merge conflicts! Other group members can create a new Markdown doc to run and save commands. Only the recorder needs to <strong>push</strong> changes (answers) to the Github repo and all others can then <strong>pull</strong> these changes (i.e. the final answers) after the HW is submitted.</p>
 <p>When you are working together on a Github project, you should commit and push your modifications frequently. You will also need to frequently <strong>pull</strong> updates from Github down to your local version of RStudio. These updates are changes that your teammates have made since your last pull. To pull in changes, click the “Down” <strong>Pull</strong> arrow in the Git tab (shown above).</p>
-<p>If you get an error about conflict after pulling or pushing, don’t freak out! This can happen if you edit a file (usually an .Rmd or .R file) in a location that was also changed by a teammate. When this happens you should attempt to fix the <strong>merge conflict</strong>. Take a look at <a href="http://r-pkgs.had.co.nz/git.html#git-pull">this resource site</a> and try to fix the merge conflict in Rstudio. Katie also created a diagram shown below that “explains” how and when conflicts will likely happen and how you can resolve the problems in Rstudio. If that doesn’t work contact me!</p>
-<div class="figure">
-<img src="img/maize_home.png" alt="" />
-<p class="caption">Conflict Resolution</p>
-</div>
+<p>If you get an error about conflict after pulling or pushing, don’t freak out! This can happen if you edit a file (usually an .Rmd or .R file) in a location that was also changed by a teammate. When this happens you should attempt to fix the <strong>merge conflict</strong>. Take a look at <a href="http://r-pkgs.had.co.nz/git.html#git-pull">this resource site</a> and try to fix the merge conflict in Rstudio.</p>
 </div>
 </div>
 </div>
@@ -198,9 +192,7 @@ files to Github by the deadline.</p>
 </div>
 <div id="acknowledgements" class="section level2 appendix">
 <h2>Acknowledgements</h2>
-<p>Most of this content in this guide was taken from
-<a href="https://github.com/jfiksel/github-classroom-for-students" class="uri">https://github.com/jfiksel/github-classroom-for-students</a> and edited
-for our classroom use.</p>
+<p>This installation guide is based on the guide from Adam Loy.</p>
 </div>
 <div id="reuse" class="section level2 appendix">
 <h2>Reuse</h2>
