--- a/content/courses/stat220/Tutorials/PAT.html
+++ b/content/courses/stat220/Tutorials/PAT.html
@@ -31,5 +31,9 @@ gitcreds_set()</code></pre>
 </ol>
 <div id="acknowledgments" class="section level2 appendix">
 <h2>Acknowledgments</h2>
+<p>This installation guide is based on the guide from Adam Loy.</p>
+</div>
+<div id="reuse" class="section level2 appendix">
+<h2>Reuse</h2>
 <p>This work is is licensed under a <a href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</p>
 </div>
