--- a/content/courses/stat220/Tutorials/github_stat220.html
+++ b/content/courses/stat220/Tutorials/github_stat220.html
@@ -93,7 +93,7 @@ box to your clipboard.)</li>
 RStudio window and select <strong>New Project…</strong>.</li>
 </ul>
 <p> </p>
-<pre class="r"><code>knitr::include_graphics(&quot;img/maize_project.png&quot;)</code></pre>
+<pre class="r"><code>knitr::include_graphics(&quot;/img/maize_project.png&quot;)</code></pre>
 <ul>
 <li><p>Select <strong>Version Control</strong> and then <strong>New Project</strong></p></li>
 <li><p>Paste the link you just copied into the Repository URL box. Leave
