--- a/content/courses/stat220/Tutorials/rstudio_stat220.html
+++ b/content/courses/stat220/Tutorials/rstudio_stat220.html
@@ -52,7 +52,7 @@ description: |
 <li>Never save files to a lab computer hard drive (e.g. desktop, downloads, etc). They will be erased when you log off.</li>
 <li>Do not use gmail as a file storage system! Avoid emailing yourself files that you created (and saved) on a lab computer. Eventually you will lose work this way.</li>
 <li>Avoid using online versions of google drive and dropbox. Similar to gmail, downloading, editing a doc, then uploading it back to drive/dropbox is another great way to lose work.</li>
-<li>Avoid <a href="https://xkcd.com/1459/">this</a>, <a href="http://phdcomics.com/comics.php?f=1531">this</a>, and <a href="https://www.datamation.com/imagesvr_ce/3829/version-control.jpg">this</a>.</li>
+<li>Avoid <a href="https://xkcd.com/1459/">this</a> and <a href="http://phdcomics.com/comics.php?f=1531">this</a>,</li>
 </ul>
 </div>
 <div id="acknowledgments" class="section level2 appendix">
