--- a/public/courses/stat220/index.html
+++ b/public/courses/stat220/index.html
@@ -696,6 +696,10 @@
       
 
 
+  <li class=""><a href="/courses/stat220/tutorials/rstudio-in-stat-220/"></a></li>
+
+
+
   <li class=""><a href="/courses/stat220/tutorials/pat/">Cache credentials for RStudio and GitHub</a></li>
 
 
