--- a/public/courses/stat220/tutorials/software/index.html
+++ b/public/courses/stat220/tutorials/software/index.html
@@ -800,8 +800,7 @@ follow Option 2</p></li>
 Slack team
 here</a>!
 You will need to create an account with a username, and log in to read
-and post. You can use Slack right from a <a href="https://stat220-fa21.slack.com">web
-browser</a>, or you can download a
+and post. You can download a
 standalone Slack application to your
 <a href="https://slack.com/downloads/osx">Mac</a>,
 <a href="https://slack.com/downloads/windows">Windows</a>,
@@ -839,7 +838,7 @@ install LaTeX. Below are the recommended installers for Windows and Mac:</p>
 </div>
 <div id="acknowledgements" class="section level2 appendix">
 <h2>Acknowledgements</h2>
-<p>This installation guide is based on the guide from stat545.com.</p>
+<p>This installation guide is based on the guide from Adam Loy.</p>
 </div>
 <div id="resuse" class="section level2 appendix">
 <h2>Resuse</h2>
