--- a/public/courses/stat220/rstudio-in-stat-220/index.html
+++ b/public/courses/stat220/rstudio-in-stat-220/index.html
@@ -840,7 +840,7 @@ option.</li>
 
 <figure  >
   <div class="d-flex justify-content-center">
-    <div class="w-100" ><img src="img/maize_files.png" alt="" loading="lazy" data-zoomable /></div>
+    <div class="w-100" ><img src="/img/maize_files.png" alt="" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
 <ul>
@@ -867,7 +867,7 @@ Home folder (if somehow you are not in it), click the <strong>…</strong> butto
 
 <figure  >
   <div class="d-flex justify-content-center">
-    <div class="w-100" ><img src="img/maize_home.png" alt="" loading="lazy" data-zoomable /></div>
+    <div class="w-100" ><img src="/img/maize_home.png" alt="" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
 <ul>
@@ -892,7 +892,7 @@ Home folder (if somehow you are not in it), click the <strong>…</strong> butto
 
 <figure  >
   <div class="d-flex justify-content-center">
-    <div class="w-100" ><img src="img/maize_newfolder.png" alt="" loading="lazy" data-zoomable /></div>
+    <div class="w-100" ><img src="/img/maize_newfolder.png" alt="" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
 <ul>
@@ -918,7 +918,7 @@ Within the folder create another <strong>New Folder</strong> and name it
 
 <figure  >
   <div class="d-flex justify-content-center">
-    <div class="w-100" ><img src="img/maize_stat220.png" alt="" loading="lazy" data-zoomable /></div>
+    <div class="w-100" ><img src="/img/maize_stat220.png" alt="" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
 <ul>
@@ -949,7 +949,7 @@ corner of your RStudio window and select <strong>New Project…</strong>.</li>
 
 <figure  >
   <div class="d-flex justify-content-center">
-    <div class="w-100" ><img src="img/maize_project.png" alt="" loading="lazy" data-zoomable /></div>
+    <div class="w-100" ><img src="/img/maize_project.png" alt="" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
 <ul>
@@ -973,7 +973,7 @@ corner of your RStudio window and select <strong>New Project…</strong>.</li>
 
 <figure  >
   <div class="d-flex justify-content-center">
-    <div class="w-100" ><img src="img/maize_newdirectory.png" alt="" loading="lazy" data-zoomable /></div>
+    <div class="w-100" ><img src="/img/maize_newdirectory.png" alt="" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
 <p>
@@ -994,7 +994,7 @@ corner of your RStudio window and select <strong>New Project…</strong>.</li>
 
 <figure  >
   <div class="d-flex justify-content-center">
-    <div class="w-100" ><img src="img/maize_newdirectory2.png" alt="" loading="lazy" data-zoomable /></div>
+    <div class="w-100" ><img src="/img/maize_newdirectory2.png" alt="" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
 <ul>
@@ -1020,7 +1020,7 @@ corner of your RStudio window and select <strong>New Project…</strong>.</li>
 
 <figure  >
   <div class="d-flex justify-content-center">
-    <div class="w-100" ><img src="img/maize_create.png" alt="" loading="lazy" data-zoomable /></div>
+    <div class="w-100" ><img src="/img/maize_create.png" alt="" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
 <ul>
@@ -1047,7 +1047,7 @@ corner of your RStudio window and select <strong>New Project…</strong>.</li>
 
 <figure  >
   <div class="d-flex justify-content-center">
-    <div class="w-100" ><img src="img/maize_Rproj.png" alt="" loading="lazy" data-zoomable /></div>
+    <div class="w-100" ><img src="/img/maize_Rproj.png" alt="" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
 <p><strong>Warning: Do not</strong> create an RStudio project in the main stat220 folder
@@ -1082,7 +1082,7 @@ Here we see the <strong>content</strong> project is open:</p>
 
 <figure  >
   <div class="d-flex justify-content-center">
-    <div class="w-100" ><img src="img/maize_content.png" alt="" loading="lazy" data-zoomable /></div>
+    <div class="w-100" ><img src="/img/maize_content.png" alt="" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
 <p>Running R from an RStudio project sets your <strong>working directory</strong> to the
@@ -1105,7 +1105,7 @@ project folder:</p>
 
 <figure  >
   <div class="d-flex justify-content-center">
-    <div class="w-100" ><img src="img/maize_getwd.png" alt="" loading="lazy" data-zoomable /></div>
+    <div class="w-100" ><img src="/img/maize_getwd.png" alt="" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
 <p>This allows for easy file path access to all files related to this
