--- a/public/courses/stat220/index.html
+++ b/public/courses/stat220/index.html
@@ -696,6 +696,10 @@
       
 
 
+  <li class=""><a href="/courses/stat220/github-in-stat-220/">GitHub Classroom Guide for Students in Stat 220</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/rstudio-in-stat-220/">Using Rstudio in Stat 220</a></li>
 
 
