--- a/content/courses/stat220/software.html
+++ b/content/courses/stat220/software.html
@@ -96,6 +96,7 @@ install.</p></li>
 follow Option 2</p></li>
 <li><p>Linux users can follow 6.4.</p></li>
 </ul>
+<p><img src="/img/maize_gittab.png" /></p>
 </div>
 <div id="slack" class="section level2">
 <h2>Slack</h2>
