--- a/public/courses/stat220/github-in-stat-220/index.html
+++ b/public/courses/stat220/github-in-stat-220/index.html
@@ -798,7 +798,7 @@
 <p>If you are using the maize RStudio server, then you can connect to
 GitHub without any extra software downloads. If you are using RStudio on
 your computer, then you will need to download Git software (as directed
-in <a href="software.md">Software in Stat 220</a>) to use GitHub connected
+in <a href="https://deepbas.io/courses/stat220/software/" target="_blank" rel="noopener">Software in Stat 220</a>) to use GitHub connected
 projects.</p>
 <p>I will host all of our course materials on GitHub, and you will use
 GitHub to submit homework and collaborate on projects.</p>
@@ -863,7 +863,7 @@ talk to me in student hours.</p>
 </li>
 </ol>
 <h2 id="individual-assignments">Individual assignments</h2>
-<p>If you followed the suggestions in the <a href="rstudio_stat220.md">Using Rstudio in Stat
+<p>If you followed the suggestions in the <a href="https://deepbas.io/courses/stat220/rstudio-in-stat-220/" target="_blank" rel="noopener">Using Rstudio in Stat
 220</a> page, then you should already have an
 assignments folder on your computer or maize account.</p>
 <p>Each new assignment/project will be posted as a repository on GitHub and
@@ -1063,7 +1063,7 @@ files to Github by the deadline.</p>
 <h2 id="group-work">Group work</h2>
 <p>Collaborative Github assignments are pretty similar to individual assignments.</p>
 <h3 id="creating-a-grouppartner-assignment-repo-and-project">Creating a group/partner assignment repo and project</h3>
-<p>Go to our course GitHub organization page(<a href="https://github.com/stat220-fa21" target="_blank" rel="noopener">https://github.com/stat220-fa21</a>) and find the repo for your group, for example if your group name is &ldquo;team01&rdquo; the you might find the <code>mp1-team01</code> repo. Clone this repo to your computer/maize account using the same steps done for an individual assignment (see steps 2-3).</p>
+<p>Go to our course GitHub organization page(<a href="https://github.com/stat220/" target="_blank" rel="noopener">https://github.com/stat220/</a>) and find the repo for your group, for example if your group name is &ldquo;team01&rdquo; the you might find the <code>mp1-team01</code> repo. Clone this repo to your computer/maize account using the same steps done for an individual assignment (see steps 2-3).</p>
 <h4 id="working-with-collaborative-repos">Working with collaborative repos</h4>
 <p>For group homework, I suggest that only the <em>recorder</em> edit the group-homework-x.Rmd file to avoid merge conflicts! Other group members can create a new Markdown doc to run and save commands. Only the recorder needs to <strong>push</strong> changes (answers) to the Github repo and all others can then <strong>pull</strong> these changes (i.e. the final answers) after the HW is submitted.</p>
 <p>When you are working together on a Github project, you should commit and push your modifications frequently. You will also need to frequently <strong>pull</strong> updates from Github down to your local version of RStudio. These updates are changes that your teammates have made since your last pull.  To pull in changes, click the &ldquo;Down&rdquo;  <strong>Pull</strong> arrow in the Git tab (shown above).</p>
