--- a/public/courses/stat220/github-in-stat-220/index.html
+++ b/public/courses/stat220/github-in-stat-220/index.html
@@ -804,7 +804,7 @@ projects.</p>
 GitHub to submit homework and collaborate on projects.</p>
 <h2 id="getting-setup-with-git-and-github">Getting setup with Git and GitHub</h2>
 <p>If you are <strong>not</strong> working on the maize RStudio server, then make sure
-that you have installed all of the software mentioned in <a href="software.md">Software in
+that you have installed all of the software mentioned in <a href="https://deepbas.io/courses/stat220/software/" target="_blank" rel="noopener">Software in
 Stat 220</a>. In addition, you should install the <code>usethis</code>
 and <code>gitcreds</code> R packages.</p>
 <p>Everyone needs to connect Git and GitHub by doing the following:</p>
@@ -835,10 +835,10 @@ so I recommend trying that first.</p>
 <li>
 <p><strong>Strongly recommended:</strong> Cache credential using a HTTPS linked
 project.</p>
-<p>Complete the steps in <a href="http://happygitwithr.com/credential-caching.html" target="_blank" rel="noopener">Section 10.1 of Happy Git with
+<p>Complete the steps in <a href="https://happygitwithr.com/https-pat.html" target="_blank" rel="noopener">Section 9.3 of Happy Git with
 R</a> to get a
 personal access token (you will need to install the <code>usethis</code>
-package first). Then, follow the directions in <a href="https://happygitwithr.com/credential-caching.html#call-an-r-function-to-store-your-credentials" target="_blank" rel="noopener">Section 10.2.1
+package first). Then, follow the directions in <a href="https://happygitwithr.com/https-pat.html#call-an-r-function-to-store-your-credentials" target="_blank" rel="noopener">Section 9.4.1
 of Happy Git with
 R</a>
 (I&rsquo;ve had good luck with the <code>gitcreds</code> package, and it is
