--- a/public/courses/stat220/index.html
+++ b/public/courses/stat220/index.html
@@ -696,6 +696,10 @@
       
 
 
+  <li class=""><a href="/courses/stat220/week1/">Week 1</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/homework-in-stat-220/">Assignments in Stat 220</a></li>
 
 
