--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -60,7 +60,8 @@
   
     
   
-  <meta name="description" content="Wednedsay, 01/05 Students are expected to open a GitHub account, verify it, and connect RStudio with that account using personal access token (PAT) credential methods. Once this step is finished, students should clone a git repository on their local machines using git version control methods, modify the files, save, commit, and push the changes to the remote repository associated with their GitHub username." />
+  <meta name="description" content="Wednedsay, 01/05 Welcome!
+Before next class Students are expected to open a GitHub account, verify it, and connect RStudio with that account using personal access token (PAT) credential methods. Once this step is finished, students should clone a git repository on their local machines using git version control methods, modify the files, save, commit, and push the changes to the remote repository associated with their GitHub username." />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/week1/" />
@@ -301,7 +302,8 @@
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week1/" />
   <meta property="og:title" content="Week 1 Summary | Deepak Bastola" />
-  <meta property="og:description" content="Wednedsay, 01/05 Students are expected to open a GitHub account, verify it, and connect RStudio with that account using personal access token (PAT) credential methods. Once this step is finished, students should clone a git repository on their local machines using git version control methods, modify the files, save, commit, and push the changes to the remote repository associated with their GitHub username." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Wednedsay, 01/05 Welcome!
+Before next class Students are expected to open a GitHub account, verify it, and connect RStudio with that account using personal access token (PAT) credential methods. Once this step is finished, students should clone a git repository on their local machines using git version control methods, modify the files, save, commit, and push the changes to the remote repository associated with their GitHub username." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -796,8 +798,16 @@
 
           <div class="article-style">
             <h2 id="wednedsay-0105">Wednedsay, 01/05</h2>
+<p>Welcome!</p>
+<h3 id="before-next-class">Before next class</h3>
 <p>Students are expected to open a GitHub account, verify it, and connect RStudio with that account using personal access token (PAT) credential methods. Once this step is finished, students should clone a git repository on their local machines using git version control methods, modify the files, save, commit, and push the changes to the remote repository associated with their GitHub username.</p>
+<p>Also, please read through all the course set-up modules and test your R-Skills by doing the test-assignment named hw0-username accessible here, <a href="https://github.com/stat220/" target="_blank" rel="noopener">Stat 220 Organization GitHub page</a>. If you could comfortably do the R component of this test assignment, then you are in pretty good shape. If not then, you need to spend more time practicing R. If you can successfully push your modifications, then you should be set up for this course, technically.</p>
 <h2 id="friday-0107">Friday, 01/07</h2>
+<h3 id="before-class">Before Class</h3>
+<p>Please read <a href="https://r4ds.had.co.nz/r-markdown.html#r-markdown" target="_blank" rel="noopener">GW RMarkdown</a>, <a href="https://r4ds.had.co.nz/introduction.html" target="_blank" rel="noopener">GW Chapter 1</a> and <a href="https://r4ds.had.co.nz/vectors.html" target="_blank" rel="noopener">GW Chapter 20</a> to prepare for class.</p>
+<p>Optional (if you need more review):</p>
+<p>If it has been a LONG time since you took STAT 120 or used R, then this crash course is helpful: <a href="https://rstudio.cloud/learn/primers/1.2" target="_blank" rel="noopener">programming basics primer from RStudio</a>. These resources are also useful if you feel like you are starting from scratch <a href="https://ismayc.github.io/rbasics-book/3-rstudiobasics.html" target="_blank" rel="noopener">R and RStudio Basics</a> and <a href="https://ismayc.github.io/rbasics-book/4-rmarkdown.html" target="_blank" rel="noopener">R Markdown</a>.</p>
+<p>See you in class!</p>
 <h2 id="lecture-slides">Lecture Slides</h2>
 <p><a href="/pdf/Day1.pdf" target="_blank">Day 1 Slides</a></p>
 
