--- a/public/courses/stat220/github-in-stat-220/index.html
+++ b/public/courses/stat220/github-in-stat-220/index.html
@@ -1107,8 +1107,7 @@ files to Github by the deadline.</p>
 </ul>
 <h2 class="appendix" id="acknowledgements">Acknowledgements</h2>
 <p>Most of this content in this guide was taken from
-<a href="https://github.com/jfiksel/github-classroom-for-students" target="_blank" rel="noopener">https://github.com/jfiksel/github-classroom-for-students</a> and edited
-for our classroom use.</p>
+<a href="https://github.com/jfiksel/github-classroom-for-students" target="_blank" rel="noopener">https://github.com/jfiksel/github-classroom-for-students</a>, edited for our classroom use by Katie St. Clair.</p>
 <h2 class="appendix" id="reuse">Reuse</h2>
 <p>This guide is licensed under the CC BY-NC 3.0 Creative
 Commons License.</p>
