--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -302,7 +302,7 @@ Before next class Students are expected to open a GitHub account, verify it, and
   
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week1/" />
-  <meta property="og:title" content="Week 1 Summary | Deepak Bastola" />
+  <meta property="og:title" content="Week 1 (In progress!) | Deepak Bastola" />
   <meta property="og:description" content="Wednedsay, 01/05 Welcome!
 Day 1 Slides
 Before next class Students are expected to open a GitHub account, verify it, and connect RStudio with that account using personal access token (PAT) credential methods." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
@@ -328,7 +328,7 @@ Before next class Students are expected to open a GitHub account, verify it, and
 
 
 
-  <title>Week 1 Summary | Deepak Bastola</title>
+  <title>Week 1 (In progress!) | Deepak Bastola</title>
 </head>
 
 
@@ -796,7 +796,7 @@ Before next class Students are expected to open a GitHub account, verify it, and
 
           
 
-          <h1>Week 1 Summary</h1>
+          <h1>Week 1 (In progress!)</h1>
 
           <div class="article-style">
             <h2 id="wednedsay-0105">Wednedsay, 01/05</h2>
@@ -805,7 +805,7 @@ Before next class Students are expected to open a GitHub account, verify it, and
 <h3 id="before-next-class">Before next class</h3>
 <p>Students are expected to open a GitHub account, verify it, and connect RStudio with that account using personal access token (PAT) credential methods. Once this step is finished, students should clone a git repository on their local machines using git version control methods (<a href="https://deepbas.io/courses/stat220/github-in-stat-220/#creating-an-individual-assignment-repo-and-project" target="_blank" rel="noopener">tutorial</a>), modify the files, save, commit, and push the changes to the remote repository associated with their GitHub username. Here is one useful video about Git and Github, <a href="https://www.youtube.com/watch?v=BCQHnlnPusY" target="_blank" rel="noopener">Introduction to Git and Github</a>.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/BCQHnlnPusY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p>Also, please read through all the course set-up modules and test your R skills by doing the test-assignment named hw0-username accessible here, <a href="https://github.com/stat220/" target="_blank" rel="noopener">Stat 220 Organization GitHub page</a>. If you could comfortably do the R component of this test assignment, then you are in pretty good shape. If not then, you need to spend more time practicing R. In addition, if you can successfully push your modifications, then you should be set up for this course, technically.</p>
+<p>Also, please read through all the course set-up modules and test your R skills by doing the test-assignment named hw0-username accessible here, <a href="https://github.com/stat220/" target="_blank" rel="noopener">Stat 220 Organization GitHub page</a>. If you could comfortably do the R component of this test assignment, then you are in pretty good shape. In addition, if you can successfully push your modifications, then you should be set up for this course, technically.</p>
 <h2 id="friday-0107">Friday, 01/07</h2>
 <h3 id="before-class">Before Class</h3>
 <p>Please read <a href="https://r4ds.had.co.nz/r-markdown.html#r-markdown" target="_blank" rel="noopener">GW RMarkdown</a>, <a href="https://r4ds.had.co.nz/introduction.html" target="_blank" rel="noopener">GW Chapter 1</a> and <a href="https://r4ds.had.co.nz/vectors.html" target="_blank" rel="noopener">GW Chapter 20</a> to prepare for class.</p>
