--- a/public/courses/stat220/github-in-stat-220/index.html
+++ b/public/courses/stat220/github-in-stat-220/index.html
@@ -721,6 +721,10 @@
 
 
 
+  <li class=""><a href="/courses/stat220/cheatsheets/">Cheatsheets</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/software/">Software in Stat 220</a></li>
 
 
@@ -1088,12 +1092,10 @@ files to Github by the deadline.</p>
 
 
 
-<figure  id="figure-fig">
+<figure  >
   <div class="d-flex justify-content-center">
     <div class="w-100" ><img src="/img/ConflictResolution.JPG" alt="My conflict resolution diagram!" loading="lazy" data-zoomable /></div>
-  </div><figcaption>
-      fig:
-    </figcaption></figure>
+  </div></figure>
 </p>
 <h2 id="additional-resources">Additional resources</h2>
 <ul>
