--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -722,6 +722,10 @@ Before next class Students are expected to open a GitHub account, verify it, and
 
 
 
+  <li class=""><a href="/courses/stat220/cheatsheets/">Cheatsheets</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/software/">Software in Stat 220</a></li>
 
 
