--- a/public/courses/stat220/index.html
+++ b/public/courses/stat220/index.html
@@ -712,6 +712,10 @@
 
 
 
+  <li class=""><a href="/courses/stat220/cheatsheets/">Cheatsheets</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/software/">Software in Stat 220</a></li>
 
 
