--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -812,7 +812,11 @@ Before next class Students are expected to open a GitHub account, verify it, and
 <p>Also, please read through all the course set-up modules and test your R skills by doing the test-assignment named hw0-username accessible here, <a href="https://github.com/stat220/" target="_blank" rel="noopener">Stat 220 Organization GitHub page</a>. If you could comfortably do the R component of this test assignment, then you are in pretty good shape. In addition, if you can successfully push your modifications, then you should be set up for this course, technically.</p>
 <h2 id="friday-0107">Friday, 01/07</h2>
 <h3 id="before-class">Before Class</h3>
-<p>Please read <a href="https://r4ds.had.co.nz/r-markdown.html#r-markdown" target="_blank" rel="noopener">GW RMarkdown</a>, <a href="https://r4ds.had.co.nz/introduction.html" target="_blank" rel="noopener">GW Chapter 1</a> and <a href="https://r4ds.had.co.nz/vectors.html" target="_blank" rel="noopener">GW Chapter 20</a> to prepare for class.</p>
+<div class="alert alert-note">
+  <div>
+    Please read <a href="https://r4ds.had.co.nz/r-markdown.html#r-markdown">GW RMarkdown</a>, <a href="https://r4ds.had.co.nz/introduction.html">GW Chapter 1</a> and <a href="https://r4ds.had.co.nz/vectors.html">GW Chapter 20</a> to prepare for the class.
+  </div>
+</div>
 <p>Optional (if you need more review):</p>
 <p>If it has been a LONG time since you took STAT 120 or used R, then this crash course is helpful: <a href="https://rstudio.cloud/learn/primers/1.2" target="_blank" rel="noopener">programming basics primer from RStudio</a>. These resources are also useful if you feel like you are starting from scratch: <a href="https://ismayc.github.io/rbasics-book/3-rstudiobasics.html" target="_blank" rel="noopener">R and RStudio Basics</a> and <a href="https://ismayc.github.io/rbasics-book/4-rmarkdown.html" target="_blank" rel="noopener">R Markdown</a>.</p>
 <p>See you in class!</p>
