--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -817,6 +817,21 @@ Before next class Students are expected to open a GitHub account, verify it, and
     Please read <a href="https://r4ds.had.co.nz/r-markdown.html#r-markdown">GW RMarkdown</a>, <a href="https://r4ds.had.co.nz/introduction.html">GW Chapter 1</a> and <a href="https://r4ds.had.co.nz/vectors.html">GW Chapter 20</a> to prepare for the class.
   </div>
 </div>
+<h3 id="in-class">In Class</h3>
+<ul>
+<li>
+<p>R-markdown and Reproducible workflows</p>
+</li>
+<li>
+<p>Getting up and running with R markdown</p>
+</li>
+<li>
+<p>Basic R-codes practice</p>
+</li>
+<li>
+<p>Link to <a href="https://github.com/stat220/01-R-markdown_example" target="_blank" rel="noopener">In Class Activity</a></p>
+</li>
+</ul>
 <p>Optional (if you need more review):</p>
 <p>If it has been a LONG time since you took STAT 120 or used R, then this crash course is helpful: <a href="https://rstudio.cloud/learn/primers/1.2" target="_blank" rel="noopener">programming basics primer from RStudio</a>. These resources are also useful if you feel like you are starting from scratch: <a href="https://ismayc.github.io/rbasics-book/3-rstudiobasics.html" target="_blank" rel="noopener">R and RStudio Basics</a> and <a href="https://ismayc.github.io/rbasics-book/4-rmarkdown.html" target="_blank" rel="noopener">R Markdown</a>.</p>
 <p>See you in class!</p>
