--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -832,6 +832,7 @@ Before next class Students are expected to open a GitHub account, verify it, and
 <p>Link to <a href="https://github.com/stat220/01-R-markdown_example" target="_blank" rel="noopener">In Class Activity</a></p>
 </li>
 </ul>
+<p><a href="/pdf/Day2.pdf" target="_blank">Day 2 Slides</a></p>
 <p>Optional (if you need more review):</p>
 <p>If it has been a LONG time since you took STAT 120 or used R, then this crash course is helpful: <a href="https://rstudio.cloud/learn/primers/1.2" target="_blank" rel="noopener">programming basics primer from RStudio</a>. These resources are also useful if you feel like you are starting from scratch: <a href="https://ismayc.github.io/rbasics-book/3-rstudiobasics.html" target="_blank" rel="noopener">R and RStudio Basics</a> and <a href="https://ismayc.github.io/rbasics-book/4-rmarkdown.html" target="_blank" rel="noopener">R Markdown</a>.</p>
 <p>See you in class!</p>
